@@ -73,6 +73,7 @@ BA  17- [libpari] QM_sqr, FqC_to_mod, ZXQX_gcd, QXQX_gcd
     18- [libpari] radicalu
     19- parallel support for lfuninit
     20- new GP function parplothexport
+BA  21- [libpari] gen_ZpM_Newton
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
